<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="0.2"
                android:padding="@dimen/margin_left10">

                <Button
                    android:id="@+id/iv_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/img_back" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="0.6"
                android:padding="@dimen/margin_left10">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/get"
                    android:textColor="@color/yellow"
                    android:textSize="22sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_save"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2">

            </RelativeLayout>
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_middle"
            android:background="@color/seting_bg"
            android:padding="@dimen/padding"
            >
            <TextView
                android:id="@+id/tv_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/yellow"
                android:text="@string/card"
                android:layout_centerVertical="true"
                />
            <EditText
                android:layout_toRightOf="@+id/tv_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:hint="@string/cardnumber"
                android:layout_marginLeft="@dimen/margin_left10"
                android:textColorHint="@color/white"
                android:background="@null"
                android:textSize="18sp"
                />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/seting_bg"
            android:padding="@dimen/padding"
            >
            <TextView
                android:id="@+id/tv_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/yellow"
                android:text="@string/card"
                android:layout_centerVertical="true"
                />
            <EditText
                android:layout_toRightOf="@+id/tv_bank"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:hint="@string/bank"
                android:layout_marginLeft="@dimen/margin_left10"
                android:textColorHint="@color/white"
                android:background="@null"
                android:textSize="18sp"
                />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/seting_bg"
            android:padding="@dimen/padding"
            >
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/yellow"
                android:text="@string/name"
                android:layout_centerVertical="true"
                />
            <EditText
                android:layout_toRightOf="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:layout_marginLeft="@dimen/margin_left10"
                android:textColorHint="@color/white"
                android:background="@null"
                android:textSize="18sp"
                />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/seting_bg"
            android:padding="@dimen/padding"
            >
            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/yellow"
                android:text="@string/time"
                android:layout_centerVertical="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_alignParentRight="true"
                android:text="@string/hour"
                android:textSize="18sp"
                />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/seting_bg"
            android:padding="@dimen/padding"
            >
            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/yellow"
                android:text="@string/count"
                android:layout_centerVertical="true"
                />
            <EditText
                android:layout_toRightOf="@+id/tv_count"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:layout_marginLeft="@dimen/margin_left10"
                android:textColorHint="@color/white"
                android:background="@null"
                android:textSize="18sp"
                />


        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notices"
                android:textColor="@color/yellow"
                android:textSize="14sp"
                android:layout_marginTop="@dimen/margin_left10"
                android:layout_marginLeft="@dimen/margin_left10"
                />
            <TextView
                android:id="@+id/tv_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/times"
                android:textColor="@color/yellow"
                android:textSize="14sp"
                android:layout_toRightOf="@+id/tv_notice"
                android:layout_marginTop="@dimen/margin_left10">

            </TextView>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_get_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:background="@drawable/btn_shape"
            android:textSize="20sp"
            android:text="@string/get"
            android:textColor="@color/yellow"
            android:layout_marginTop="@dimen/qav_gaudio_member_name_width"
            />







    </LinearLayout>



</ScrollView>