<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/rl_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="0.2"
                android:padding="@dimen/margin_left10" >

                <Button
                    android:id="@+id/iv_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/img_back" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:layout_weight="0.6"
                android:padding="@dimen/margin_left10" >

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/setting"
                    android:textColor="@color/yellow"
                    android:textSize="22sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_save"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" >

            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_conunt_safe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/seting_bg"
            android:layout_marginTop="@dimen/margin_left_middle"
            android:padding="@dimen/margin_right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/safe"
                android:textColor="@color/yellow"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/img_back_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_black_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/seting_bg"
            android:layout_marginTop="@dimen/margin_left10"
            android:padding="@dimen/margin_right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/black_list"
                android:textColor="@color/yellow"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/img_back_right" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/seting_bg"
            android:layout_marginTop="1dp"
            android:padding="@dimen/margin_right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/clear"
                android:textColor="@color/yellow"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/img_back_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_callback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/seting_bg"
            android:layout_marginTop="@dimen/margin_left10"
            android:padding="@dimen/margin_right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/feedback"
                android:textColor="@color/yellow"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/img_back_right" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/seting_bg"
            android:layout_marginTop="1dp"
            android:padding="@dimen/margin_right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/aboutus"
                android:textColor="@color/yellow"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/img_back_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_comment_pro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/seting_bg"
            android:layout_marginTop="@dimen/margin_left_middle"
            android:padding="@dimen/margin_right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/problem"
                android:textColor="@color/yellow"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/img_back_right" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape"
            android:text="@string/exit_out"
            android:textColor="@color/yellow"
            android:layout_marginTop="@dimen/audio_friend_imgW"
            android:layout_marginLeft="@dimen/margin_right"
            android:layout_marginRight="@dimen/margin_right"
            android:textSize="20sp"
            />



    </LinearLayout>









</ScrollView>